# breakall

./: .gitignore  README.md  TODO  pyproject.toml  test.py  test2.py
.github/workflows/: ci.yml  codeql.yml  publish.yml
breakall/: __info__.py  __init__.py  __main__.py  breakall.py  exceptions.py  nodes.py  runtime.py
tests/: __init__.py  test_basic.py  test_breakall.py  test_cli.py  test_coverage.py
